spacing fixes

--- a/src/pages/home/home.module.scss
+++ b/src/pages/home/home.module.scss
@@ -6,7 +6,7 @@
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
-		padding: 50px $padding;
+		padding: 80px $padding;
 
 		@media only screen and (max-width: 767px) {
 			display: block;
